# saltatlas

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  LICENSE  README.md
.github/workflows/: ci-build-test.yml
cmake/: saltatlasConfig.cmake.in  saltatlasDoxygen.cmake
docs/: CMakeLists.txt
docs/rtd/: CMakeLists.txt  build.rst  build_lc.rst  conf.py  index.rst
docs/rtd/api/: index.rst
docs/rtd/api/dnnd/: dnnd.rst  dnnd_pm.rst
docs/rtd/api/dnnd/dndetail/: base_dnnd.rst
docs/rtd/dev/: index.rst
docs/rtd/dhnsw/: index.rst
docs/rtd/dnnd/: index.rst
examples/: CMakeLists.txt  benchmark_hdf5.cpp  binary_nn_benchmark.cpp  dhnsw_ascii_levenshtein.cpp  dhnsw_big_ann.cpp  dhnsw_example.cpp  dhnsw_levenshtein.cpp  dhnsw_nearest_neighbor_graph.cpp  dhnsw_verbose_levenshtein.cpp  dnnd_advanced.cpp  dnnd_advanced_example.cpp  dnnd_bench.cpp  dnnd_big_ann_bench.cpp  dnnd_custom_point_example.cpp  dnnd_example.cpp  dnnd_example_common.hpp  dnnd_levenshtein.cpp  dnnd_pm_const_example.cpp  dnnd_pm_optimize_example.cpp  dnnd_pm_query_example.cpp  dnnd_simple.cpp  dnnd_simple_charhist.cpp  dnnd_simple_custom_distance_example.cpp  dnnd_simple_custom_point_example.cpp  dnnd_simple_example.cpp  dnnd_simple_levenshtein.cpp  dnnd_string_example.cpp  knn_bruteforce.cpp  knn_dpockets_array_test.cpp  knn_dpockets_hdf5.cpp  knn_dpockets_vec_test.cpp  knn_query_example.cpp  nnd_query_example.cpp  saltatlas_example.cpp  space_wrapper_example.cpp  test_partitioner.cpp
examples/datasets/: CMakeLists.txt  README  README.md  all-distance-pairs_5-4.txt  ground-truth_5-4.txt  ground-truth_string.txt  point-distance_5-4.txt  point_5-4.txt  point_string.txt  query_5-4.txt  query_string.txt
include/saltatlas/: hnswlib_space_wrapper.hpp  point_store.hpp  saltatlas.hpp  types.hpp  utility.hpp
include/saltatlas/container/: pair_bag.hpp
include/saltatlas/detail/: dist_index.hpp  functional.hpp  query_engine.hpp
include/saltatlas/dhnsw/: dhnsw.hpp
include/saltatlas/dhnsw/detail/: dist_index.hpp  hnswlib_space_wrapper.hpp  query_engine.hpp  utility.hpp
include/saltatlas/dnnd/: big_ann_bench_data_reader.hpp  data_reader.hpp  dhnsw_index_reader.hpp  distance.hpp  dnnd.hpp  dnnd_advanced.hpp  dnnd_fwd.hpp  dnnd_pm.hpp  dnnd_simple.hpp  feature_vector.hpp  nn_query.hpp  point_reader.hpp  utility.hpp
include/saltatlas/dnnd/detail/: base_dnnd.hpp  distance.hpp  dnnd_kernel.hpp  feature_vector.hpp  neighbor.hpp  neighbor_cereal.hpp  nn_index.hpp  nn_index_optimizer.hpp  nn_index_query_preparator.hpp  point_store.hpp  query_kernel.hpp
include/saltatlas/dnnd/detail/utilities/: allocator.hpp  bitset.hpp  blas.hpp  file.hpp  float.hpp  general.hpp  hash.hpp  iterator_proxy.hpp  mpi.hpp  omp.hpp  string_cast.hpp  time.hpp  ygm.hpp
include/saltatlas/partitioner/: metric_hyperplane_partitioner.hpp  voronoi_partitioner.hpp
test/: CMakeLists.txt
utility/: CMakeLists.txt  convert_ann_bench_dataset.py  convert_big_ann_bench_dataset.cpp  convert_big_ann_bench_dataset.py  convert_wsv_to_wsv_id.cpp  dnnd_add_knng_edges.cpp  dnnd_make_shm_nn_data.cpp  dnnd_transfer_pm_datastore.cpp
